--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -9,7 +9,7 @@
 //
 
 // stylelint-disable
-$white:    #fff !default;
+$white:    #ccc !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
 $gray-300: #dee2e6 !default;
